Revise project details and add technical skills
Updated project descriptions and technical skills section.

--- a/index.html
+++ b/index.html
@@ -274,16 +274,16 @@
 
       <div class="musfan-screenshots">
         <figure>
-          <img src="assets/musfan-lms/login.jpg" alt="Login screen">
-          <figcaption>Authentication and onboarding flow</figcaption>
+          <img src="assets/musfan-lms/login.jpg" alt="Musfan LMS login">
+          <figcaption>Authentication and onboarding</figcaption>
         </figure>
         <figure>
-          <img src="assets/musfan-lms/super-admin.jpg" alt="Super admin dashboard">
+          <img src="assets/musfan-lms/super-admin.jpg" alt="Musfan LMS super admin">
           <figcaption>Super Admin multi tenant control</figcaption>
         </figure>
         <figure>
-          <img src="assets/musfan-lms/dean-dashboard.jpg" alt="Dean dashboard">
-          <figcaption>School level daily operations</figcaption>
+          <img src="assets/musfan-lms/dean-dashboard.jpg" alt="Musfan LMS dean dashboard">
+          <figcaption>Dean operations dashboard</figcaption>
         </figure>
       </div>
     </div>
@@ -304,7 +304,40 @@
       </ul>
     </div>
 
+    <div class="project-card">
+      <h3>Online Retail Store Database</h3>
+      <ul>
+        <li>Structured inventory and order schema</li>
+        <li>Optimized query performance</li>
+      </ul>
+    </div>
+
+    <div class="project-card">
+      <h3>Cyber Ethics Report</h3>
+      <ul>
+        <li>Researched digital responsibility and legal aspects</li>
+        <li>Managed a four person team</li>
+      </ul>
+    </div>
+
+    <div class="project-card">
+      <h3>Virtual Accessibility Software</h3>
+      <ul>
+        <li>Built navigation flows for visually impaired users</li>
+        <li>Added audio prompts and tested features</li>
+      </ul>
+    </div>
+
   </div>
+</section>
+
+<section>
+  <h2>Technical Skills</h2>
+  <p>Programming. C, Java, JavaScript, HTML, Dart Flutter</p>
+  <p>Tools. Git, Linux, Nmap, Wireshark, Burp Suite, Kali Linux, Parrot OS</p>
+  <p>Cloud. Basic cloud deployment, server testing, version control</p>
+  <p>Database. SQL, schema planning, data checks, performance notes</p>
+  <p>Testing. Feature testing, workflow review, error reporting, data validation</p>
 </section>
 
 <section>
@@ -314,6 +347,16 @@
     <li>Web Security and Bug Bounty Learn PenTest</li>
     <li>Cisco Cybersecurity Essentials</li>
     <li>PCEP Certified Entry Level Python</li>
+  </ul>
+</section>
+
+<section>
+  <h2>Strengths</h2>
+  <ul>
+    <li>Fast learner</li>
+    <li>Strong teamwork and leadership</li>
+    <li>Problem solving and analytical thinking</li>
+    <li>Fluent English communication</li>
   </ul>
 </section>
 
